--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3-5-Alpha2
	- Added Localplay controls to API 
	- Added Added/Updated filters to API include the ability to specify
		a date range using ISO 8601 format with [START]/[END]
	- Changed API Date format to ISO 8601 
	- Fixed Incorrect Caching of Album records that caused the 
		Name + Year + Disk to not be respected
	- Added Lyrics Patch (Thx alister55 & momo-i)
	- Fixed password not updating when editing an HTTPQ localplay
		instance
	- Added Video support
	- Fixed normalize tracks not re-displaying playlist correctly
	- Fixed now playing now showing currently playing song
	- Fixed now playing clear all not correctly refreshing screen
	- Fixed adding object to playlist so that it correctly shows the 
		songs rather then an empty playlist
	- Added User Agent to IP History information gathering
	- Added Access Control List Wizards to make API interface
		setup easier
	- Added IPv6 support for Access Control, Sessions, IP History 
	- Fixed sorting issue on artist when using search method
	- Updated flash player to 5.9.5
	- Fixed bug where you admins couldn't edit preferences of
		users due to missing 'key' on form
	- Added Mime type to Song XML 

--------------------------------------------------------------------------
  v.3.5-Alpha1 12/31/2008
	- Fixed sort_files script so that it properly handles variable
		album art file names in the directories
	- Fixed issue where small thumbnails were used for larger images
		if gd based resizing was enabled in the config
	- Fixed catalog_update.inc so it doesn't produce errors
	- Made democratic play respect force http play
	- Make installation error messages more helpful
	- Added Swedish (sv_SE) translation (Thanks yeager)